Fix scroll corner font alignment issues for split scroll icon

--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -144,6 +144,7 @@ $images: "./../../assets";
     background-color: Scrollbar;
     z-index: 1000;
     cursor: default;
+    font-family: "Courier New", monospace
 }
 
 .scroll-split-button {
